Implement radical lookup
